MD: Fix overly compact wrapped headers

--- a/src/App.css
+++ b/src/App.css
@@ -810,14 +810,17 @@ h2 {
 
 h3 {
   font-size: 1.4em;
+  line-height: 1.4em;
 }
 
 h4 {
   font-size: 1.2em;
+  line-height: 1.4em;
 }
 
 h5 {
   font-size: 1.1em;
+  line-height: 1.4em;
 }
 
 p {
